-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.4
-
None
-
7a8f3b661 (dev), c0978ce79 (6.7), 99ab479a3 (6.6), b862d0b01 (tqtc/lts-6.5)
due to this change
https://code.qt.io/cgit/qt/qtbase.git/commit/src/gui/kernel/qguiapplication.cpp?h=6.5&id=fa62733c207cef2e4f542b313401578e4affa179
Qt won't create XDG_RUNTIME_DIR if it does not exist.
if without that change, Qt will create the XDG_RUNTIME_DIR folder with the following function stack.
checkNeedPortalSupport
→ locate(RuntimeLocation)
→ writableLocation(RuntimeLocation)
→ checkXdgRuntimeDir // create XDG_RUNTIME_DIR here via QT_MKDIR
do we intend to change behaviour like this?
If yes, we shall also give instructions to the user on how to build a runtime environment for wayland.