Make sure XDG_RUNTIME_DIR is created

Before Qt 6.5, QGuiApplication would create XDG_RUNTIME_DIR as a
side effect of looking up QStandardPaths::writableLocation during
platform theme initialization. Since QtWaylandCompositor cannot function
without a writable XDG_RUNTIME_DIR, do that lookup when the compositor
is constructed.

Fixes: QTBUG-122965
Pick-to: 6.5
Change-Id: Ia2365f08ba75be276ca7cc5520875c08cc82b465
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>
(cherry picked from commit 7a8f3b66158c9c5cd388ff5adb533259b87ab843)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit c0978ce798c1d85a485f74a891d18516ef3409f8)